microservices-project/infra/k8s/task-schedule-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-schedule-srv
spec:
  type: NodePort
  selector:
    app: task-schedule
  ports:
    - name: task-schedule
      protocol: TCP
      port: 3000
      targetPort: 3000
